[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.0"
]

[tool.black]
line-length = 79

[tool.bumpversion]
allow_dirty = true
commit = true
commit_args = "-sS"
current_version = "0.66.1"
message = "bump: version {current_version} → {new_version}"
sign_tags = true
tag = true

[[tool.bumpversion.files]]
filename = "docs/conf.py"

[[tool.bumpversion.files]]
filename = "docsig/_version.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
replace = 'version = "{new_version}"'
search = 'version = "{current_version}"'

[[tool.bumpversion.files]]
filename = "package.json"
replace = '"version": "{new_version}"'
search = '"version": "{current_version}"'

[[tool.bumpversion.files]]
filename = "README.rst"
replace = "rev: v{new_version}"
search = "rev: v{current_version}"

[[tool.bumpversion.files]]
filename = "README.rst"
replace = "docsig: {new_version}"
search = "docsig: {current_version}"

[[tool.bumpversion.files]]
filename = "README.rst"
replace = "- docsig=={new_version}"
search = "- docsig=={current_version}"

[[tool.bumpversion.files]]
filename = "SECURITY.md"

[[tool.bumpversion.files]]
filename = "Makefile"
replace = "VERSION := {new_version}"
search = "VERSION := {current_version}"

[tool.codespell]
ignore-words-list = "astroid"

[tool.coverage.report]
exclude_lines = [
  "@_t.overload",
  "if __name__ == .__main__.:"
]
fail_under = 100

[tool.coverage.run]
omit = [
  "docs/conf.py",
  "docsig/__main__.py",
  "whitelist.py"
]

[tool.deptry.per_rule_ignores]
DEP004 = [
  "flake8",
  "git",
  "pytest",
  "tomli_w",
  "yaml"
]

[tool.docformatter]
in-place = true
wrap-summaries = 72

[tool.docsig]
check-class = true
check-protected-class-methods = true

[tool.flynt]
line-length = 79
transform-concats = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.mypy]
exclude = [
  'whitelist\.py'
]
ignore_missing_imports = true
install_types = true
non_interactive = true

[tool.poetry]
authors = [
  "jshwi <stephen@jshwisolutions.com>"
]
description = "Check signature params for proper documentation"
documentation = "https://docsig.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/docsig/"
keywords = [
  "check",
  "docs",
  "docstring",
  "params",
  "signature"
]
license = "MIT"
maintainers = [
  "jshwi <stephen@jshwisolutions.com>"
]
name = "docsig"
readme = "README.rst"
repository = "https://github.com/jshwi/docsig"
version = "0.66.1"

[tool.poetry.dependencies]
Sphinx = "^7.0.0"
astroid = "^3.0.1"
pathspec = "^0.12.1"
python = "^3.8.1"
tomli = "^2.0.1"
wcmatch = ">=8.5.2,<11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
bump-my-version = ">=0.24.1,<0.30.0"
deptry = ">=0.16.1,<0.21.0"
docformatter = "^1.7.5"
flynt = "^1.0.1"
gitpython = "^3.1.43"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.3.3"
pylint = "^3.1.0"
tomli = "^2.0.1"
tomli-w = "^1.0.0"
towncrier = "^23.11.0"
tox = "^4.15.0"
vulture = "^2.11"

[tool.poetry.group.docs.dependencies]
furo = "^2024.4.27"
myst-parser = "^3.0.1"
pytest = "^8.2.0"
pyyaml = "^6.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-markdown-builder = ">=0.5.5,<0.7.0"
templatest = "^0.10.1"

[tool.poetry.group.flake8.dependencies]
flake8 = "^7.1.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.0"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
pytest-gitignore = "^1.3"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"
templatest = "^0.10.1"

[tool.poetry.plugins."flake8.extension"]
SIG = "docsig.plugin:Docsig"

[tool.poetry.scripts]
docsig = "docsig.__main__:main"

[tool.pylint.options]
disable = [
  "consider-using-f-string",
  "fixme"
]
ignore-patterns = [
  'conf\.py',
  'whitelist\.py'
]
min-similarity-lines = 9

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--cov-report=term-missing",
  "--durations=5",
  "-vv"
]
filterwarnings = "ignore::DeprecationWarning"
markers = [
  "benchmark: Marks tests as benchmarks"
]
norecursedirs = [
  ".git",
  ".idea",
  ".mypy_cache",
  ".pytest_cache",
  "docs"
]

[tool.towncrier]
directory = "changelog"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/jshwi/docsig/issues/{issue})"
package = "docsig"
start_string = "<!-- release notes start -->\n"
template = "changelog/_template.md"

[tool.towncrier.fragment.add]
name = "Added"

[tool.towncrier.fragment.change]
name = "Changed"

[tool.towncrier.fragment.deprecate]
name = "Deprecated"

[tool.towncrier.fragment.fix]
name = "Fixed"

[tool.towncrier.fragment.hack]
name = "Hacked"

[tool.towncrier.fragment.remove]
name = "Removed"

[tool.towncrier.fragment.security]
name = "Security"
